dev/k8s/judge-k8s-webhook.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: judge-test
---
apiVersion: v1
kind: Service
metadata:
  namespace: judge-test
  labels:
    app: judge-k8s-webhook
  name: judge-k8s-webhook
spec:
  ports:
    - name: https
      port: 443
      targetPort: 1323
      protocol: "TCP"
  selector:
    app: judge-k8s-webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: judge-test
  name: judge-k8s-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: judge-k8s-webhook
  template:
    metadata:
      labels:
        app: judge-k8s-webhook
    spec:
      containers:
        - name: judge-k8s-webhook
          image: "skaffold-dev:34751/judge-k8s"
          command:
            - "judge-k8s"
            - "serve"
          args:
            - "--cert=/run/secrets/tls/tls.crt"
            - "--key=/run/secrets/tls/tls.key"
            - "--policy=/run/witness-policy/witness-policy.json"
            - "--port=1323"
            - "--b64-public-key=/run/witness-policy/public-key.pem.b64"
            # - "--rekor-server=http://rekor-server.default.svc.cluster.local:8077"
          volumeMounts:
            - name: webhook-tls-certs
              mountPath: /run/secrets/tls
              readOnly: true
            - name: witness-policy
              mountPath: /run/witness-policy
              readOnly: true
          ports:
            - name: http
              containerPort: 1323
      volumes:
        - name: webhook-tls-certs
          secret:
            secretName: webhook-server-tls
        - name: witness-policy
          configMap:
            name: witness-policy
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  namespace: judge-test
  name: judge-k8s-webook
webhooks:
  - name: judge-k8s-webhook.judge-test.svc
    admissionReviewVersions:
      - "v1"
      - "v1beta1"
    failurePolicy: Ignore
    sideEffects: None
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: "Namespaced"
    clientConfig:
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURQekNDQWllZ0F3SUJBZ0lVT29ia2hWbkprNVkwQjBYZzU0MUk2U3pyM3Brd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0x6RXRNQ3NHQTFVRUF3d2tRV1J0YVhOemFXOXVJRU52Ym5SeWIyeHNaWElnVjJWaWFHOXZheUJFWlcxdgpJRU5CTUI0WERUSTFNVEV3TnpFeE1EY3dObG9YRFRJMU1USXdOekV4TURjd05sb3dMekV0TUNzR0ExVUVBd3drClFXUnRhWE56YVc5dUlFTnZiblJ5YjJ4c1pYSWdWMlZpYUc5dmF5QkVaVzF2SUVOQk1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQWxpcGtXbFBPWUdMemh4WVRHa2FYaUtWTFZCNG1heFFLaUo0ZgpSYkQxVUVYdDRZYjg4OEdC [...]
      service:
        name: judge-k8s-webhook
        namespace: judge-test
        path: /mutate
